<resources>
    <string name="app_name">Car Insurance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">CAR INSURANCE</string>
    <string name="hint_email">Ingresa tu mail</string>
    <string name="hint_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_ime">Loguear</string>
    <string name="title_activity_push_notifications">Notificaciones</string>
    <string name="btn_redimir">Redimir</string>
    <string name="no_message_text">No hay una notificación todavia</string>
    <string name="acept">Aceptar</string>
    <string name="send_txt">Enviar datos</string>
</resources>
